--- a/src/styles/Schedule.css
+++ b/src/styles/Schedule.css
@@ -2,6 +2,9 @@
   color: white;
   margin-bottom: 60px;
 }
+.schedule-page * {
+  overflow-x: visible !important;
+}
 .schedule-page .schedule-content {
   height: 100%;
   color: white;
