--- a/src/styles/Sponsors.css
+++ b/src/styles/Sponsors.css
@@ -1,3 +1,6 @@
+.sponsors-page * {
+  overflow-x: visible !important;
+}
 .sponsors-page .sponsors-content {
   height: 100%;
 }
